--- a/test.css
+++ b/test.css
@@ -71,5 +71,60 @@ img {
 
 #result {
     background: ghostwhite;
-    height: 50px;
+    /* height: 50px; */
+}
+/* 
+#movieTitle {
+    color: red;
+    padding-top: 5px;
+    padding-left: 100px;
+}  */
+
+/* New styling begins here */
+
+.movieResult {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    border-style: solid;
+    border-width: .5px;
+    height: min-content;
+}
+
+.movieTitle {
+    color: red;
+    grid-column-start: 3;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    margin: 14px;
+} 
+
+.poster {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    margin: 10px;
+    height: 200px;
+}
+
+
+.desc {
+    grid-column-start: 3;
+    grid-column-end: 7;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    font-size: 12px;
+    margin: 10px;
+}
+
+.releaseDate {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end:4;
+    font-size: 12px;
+    align-self: last baseline;
+    margin: 10px;
 }
